@@ -1,3 +1,9 @@
+2005-02-15  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkcellrenderertext.xml (Properties): Add GTK+ 2.6
+	properties ellipsize, ellipsize-set, width-chars. Alphabetize entries.
+	Fixes #167504 (Rafael Villar Burke)
+
 2005-02-03  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkcellrenderer.xml (stop_editing, "editing-started"):
